Porque que a porra da descrição ainda tá aparecendo?

--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Site settings
-title: Gustavo Vinícius
+title: Gustavo Viníciusx
 email: me@gustavovinicius.com
 baseurl: ""
 url: "http://gustavovinicius.com"
