Isso que dá tirar variável...

--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Site settings
-title: Gustavo Viníciusx
+title: Gustavo Vinícius
 email: me@gustavovinicius.com
 baseurl: ""
 url: "http://gustavovinicius.com"
